--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "tube-fx",
   "version": "0.1.0",
   "private": true,
-  "author":"Shahidul Alam",
+  "author": "Shahidul Alam",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
